--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@typegoose/typegoose": "^7.1.3",
+    "apollo-datasource": "^0.7.1",
     "apollo-server": "^2.14.1",
     "config": "^3.3.1",
     "express": "^4.17.1",
