--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@typegoose/typegoose": "^7.1.3",
-    "apollo-datasource": "^0.7.1",
+    "apollo-datasource-mongodb": "^0.2.6",
     "apollo-server": "^2.14.1",
     "config": "^3.3.1",
     "express": "^4.17.1",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/config": "0.0.36",
     "@types/jest": "^25.2.3",
+    "@types/mongodb": "^3.5.20",
     "@types/mongoose": "^5.7.21",
     "@types/sinon": "^9.0.4",
     "apollo-server-testing": "^2.14.1",
