--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typegoose/typegoose": "^7.1.3",
     "apollo-datasource-mongodb": "^0.2.6",
     "apollo-server": "^2.14.1",
+    "apollo-server-cache-redis": "^1.2.1",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.16",
