--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@typegoose/typegoose": "^7.1.3",
     "apollo-datasource": "^0.7.1",
     "apollo-server": "^2.14.1",
+    "apollo-server-cache-redis": "^1.2.1",
+    "apollo-server-caching": "^0.5.1",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.16",
@@ -24,7 +26,9 @@
   },
   "devDependencies": {
     "@types/config": "0.0.36",
+    "@types/ioredis": "^4.16.3",
     "@types/jest": "^25.2.3",
+    "@types/mongodb": "^3.5.20",
     "@types/mongoose": "^5.7.21",
     "@types/sinon": "^9.0.4",
     "apollo-server-testing": "^2.14.1",
