--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-server-caching": "^0.5.1",
     "config": "^3.3.1",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.16",
     "typescript": "^3.9.3",
     "winston": "^3.2.1"
@@ -28,6 +29,7 @@
     "@types/config": "0.0.36",
     "@types/ioredis": "^4.16.3",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.155",
     "@types/mongodb": "^3.5.20",
     "@types/mongoose": "^5.7.21",
     "@types/sinon": "^9.0.4",
